# thrie-raed-chess

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.ja.md  README.md  THIRD_PARTY_LICENSES  learn_chess.py  pyproject.toml  test_core.py  test_learn_chess.py  test_session.py  test_tui.py
.github/workflows/: deploy-web.yml
docs/: backstory.md  web-vs-tui.md
docs/superpowers/specs/: 2026-07-11-github-repo-setup-design.md  2026-07-18-mobile-web-port-design.md
movesense/: __main__.py  boardmodel.py  config.py  puzzles.py  review.py  session.py  stats.py
movesense/data/: puzzles.json
movesense/tui/: app.py  glyphs.py  movesense.tcss  screens.py  theme.py  widgets.py
tests/: test_coach.py  test_core.py  test_session.py  test_tui.py
thrie_raed_chess/: boardmodel.py  coach.py  config.py  evaluation.py  puzzles.py  review.py  session.py
thrie_raed_chess/tui/: app.py  glyphs.py  logo.py  screens.py  theme.py  thrie_raed_chess.tcss  widgets.py
tools/: extract_lichess_puzzles.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: copy-engine.mjs  copy-logo.mjs  copy-puzzles.mjs
web/src/: App.css  App.tsx  config.ts  index.css
web/src/components/: Board.css  Board.tsx  CoachBubble.css  CoachBubble.tsx
web/src/engine/: engine.worker.ts  uci-client.ts  uci-parser.ts
web/src/lib/: boardmodel.ts  coach.ts  evaluation.ts  openings.ts  puzzles.ts  review.ts  (+3 more)
web/tests/: boardmodel.test.ts  coach.test.ts  evaluation.test.ts  openings.test.ts  puzzles.test.ts  review.test.ts  session.test.ts  uci-client.test.ts
(+10 files in other folders)
