[project]
name = "thrie-raed-chess"
version = "0.1.0"
description = "Learn chess moves through 3-choice quizzes in your terminal (3択で覚えるチェス)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES"]
authors = [{ name = "hnsol" }]
requires-python = ">=3.11"
dependencies = [
    "chess>=1.10",
    "textual>=0.60",
]

[project.scripts]
thrie-raed-chess = "thrie_raed_chess.tui.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thrie_raed_chess"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
